# idrac-cli

./: .gitignore  Cargo.toml  README.md
src/: chassis.rs  idrac.rs  lib.rs  main.rs  network.rs  storage.rs
src/chassis/: get_chassis_info.rs  get_network_adapter.rs  get_network_port.rs  get_storage_controller.rs  get_storage_volume.rs  list_network_adapters.rs  list_storage_options.rs  list_storage_volumes.rs
src/idrac/: get_idrac_version.rs
src/network/: get_network_adapter.rs  list_network_adapters.rs
src/storage/: get_storage_disk.rs
