[package]
name = "idrac-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
config = { version = "0.13.2", features = ["json"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
